[gd_scene load_steps=4 format=2]

[ext_resource path="res://Games/Welding/Welding.tscn" type="PackedScene" id=1]
[ext_resource path="res://Games/Welding/Heat_Button.gd" type="Script" id=2]

[sub_resource type="ImageTexture" id=1]

[node name="RootNode" instance=ExtResource( 1 )]

[node name="Button" type="Button" parent="." index="0"]
margin_left = 591.0
margin_top = 361.0
margin_right = 1023.0
margin_bottom = 601.0
script = ExtResource( 2 )

[node name="Heat_Bar" type="ProgressBar" parent="Button" index="0"]
margin_left = 20.0
margin_top = -39.0
margin_right = 414.0
margin_bottom = -6.0
step = 1.0
percent_visible = false

[node name="Sprite" type="Sprite" parent="Button" index="1"]
texture = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="." index="1"]

[connection signal="button_down" from="Button" to="Button" method="_on_Button_button_down"]
[connection signal="button_up" from="Button" to="Button" method="_on_Button_button_up"]
